--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ numpy==1.19.0
 requests==2.24.0
 scikit-learn==0.23.1
 scipy==1.5.0
+setuptools==1.0
 sklearn==0.0
 threadpoolctl==2.1.0
 urllib3==1.25.9
