--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,6 @@ threadpoolctl==2.1.0
 urllib3==1.25.9
 Werkzeug==1.0.1
 wincertstore==0.2
-gunicorn
+gunicorn==19.9.0
+matplotlib>=1.4.3
+pandas>=0.19
